--- a/src/components/layout/assets/Topbar.module.scss
+++ b/src/components/layout/assets/Topbar.module.scss
@@ -1,7 +1,8 @@
 @import "./../styles/fluid.scss";
 
 .Topbar {
-
+  background: var(--background-basic);
+  color: var(--text-basic);
 }
 
 .Topbar_header {
